2007-06-14  Bas Wijnen  <shevek@fmf.nl>

	* VERSION: Updated to 1.5
	* z80asm.c, z80asm.h: Fix handling of $ in stored expressions (thanks
	to Tomaz Solc for reporting and analysing this.
	* Makefile: Remove executable if tests fail.
	* tests/pass.asm, tests/pass.correct-bin: Add some tests.
	* z80asm.c: Make unresolvable references a normal error (instead of an
	internal assembler problem).

2007-06-05  Bas Wijnen  <shevek@fmf.nl>

	* VERSION: Updated to 1.4
	* z80asm.c: Fix bit/set/res instructions.

2007-05-24  Bas Wijnen  <wijnen@debian.org>

	* VERSION: Updated to 1.3.
	* tests, tests/pass.asm, tests/pass.correct-bin,
	tests/pass.correct-err, tests/Makefile: Add test suite to spot
	regressions.
	* expressions.c, z80asm.h: New files, split from z80asm.c.
	* Makefile: Updated.
	* expressions.c, z80asm.c: Warn for value truncation, warn for
	expressions fully in parenthesis, improve skipword so it doesn't break
	on comments with parentheses, improve expression parsing so
	"ld a, (1) + 1" doesn't result in an error.
	* examples/macro.asm: Fixed to make it usable as a rom.
	* z80asm.1: Updated.

2005-11-30  Jan Wilmans  <jw@dds.nl>

	* z80asm.c: Added unoffical syntax of ADD A,r as ADD r
	* z80asm.c: Added unoffical syntax of SUB r as SUB A,r

2005-11-30  Jan Wilmans  <jw@dds.nl>

	* z80asm.c: Added new seek command

2005-11-29  Jan Wilmans  <jw@dds.nl>

	* z80asm.c: Added two extra verbosity levels.

2005-11-13  Bas Wijnen  <shevek@fmf.nl>

	* z80asm.c: Run indent.

2005-10-14  Bas Wijnen  <shevek@fmf.nl>

	* z80asm.c (struct reference, compute_ref, new_reference): Removed
	copy of stack frame from struct reference.

2005-09-14  Bas Wijnen  <shevek@fmf.nl>

	* z80asm.c (open_include_file, assemble): Open incbin'd files as
	binary.

2005-06-16  Bas Wijnen  <shevek@fmf.nl>

	* Makefile: Fix incorrect version.
	* z80asm.c (enum mnemonic, mnemonics, assemble), examples/hello.asm:
	Rename bininclude to incbin.